gccida/g1/build_index_type
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_index_type/src/tree.c:4276:63: error: expected expression
node->int_cst.int_cst = *( $A887AD9C3C6C8CC7716950D571F57C9D *)&v4->block.vars; 
                                                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_index_type/src/tree.c:4276:28: error: use of undeclared identifier '$A887AD9C3C6C8CC7716950D571F57C9D'
node->int_cst.int_cst = *( $A887AD9C3C6C8CC7716950D571F57C9D *)&v4->block.vars; 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_index_type/src/obj/tree.o] Error 1
